<resources>
    <string name="app_name">Tracker</string>
    <string name="title_activity_maps">Tracker</string>
    <string name="action_add">Adicionar</string>
    <string name="action_refresh">Atualizar</string>
    <string name="action_settings">Configurações</string>
    <string name="navigation_drawer_open">Abrir barra de navegação</string>
    <string name="navigation_drawer_close">Fechar barra de navegação</string>
    <string name="title_activity_main">Map</string>
    <string name="TrackerImageDescription">Modelo do rastreador</string>
    <string name="title_activity_cards">Tracker</string>
    <string name="txtNoTracker">Nenhum rastreador</string>
    <string name="txtNoTrackerDescription">Você pode utilizar o botão abaixo para adicionar novos rastreadores na unidade.</string>
    <string name="btnAddTracker">Adicionar rastreador</string>
    <string name="imgNoTracker">Nenhum rastreador localizado</string>
    <string name="imgTracker">Modelo do rastreador</string>
    <string name="imgBatteryLevel">Nível da bateria</string>
    <string name="imgSignalLevel">Nível do sinal</string>
    <string name="imgMap">Imagem do mapa</string>
    <string name="menu_include">Incluir</string>
    <string name="menu_delete">Excluir</string>
    <string name="txtLowBattery">Quando o rastreador informar que a bateria está abaixo de 30%, uma notificação será exibida neste aparelho.</string>
    <string name="lblTrackerStatus">Status do rastreador</string>
    <string name="txtTrackerStatus">Mostra uma notificação quando o rastreador informar o percentual de bateria e sinal de GSM.</string>
    <string name="lblMovementStatus">Alerta de movimentação</string>
    <string name="txtMovementStatus">Exibe notificação quando o rastreador se movimentar mais de 50m de sua posição atual.</string>
    <string name="lblStoppedStatus">Alerta de permanência</string>
    <string name="txtStoppedStatus">Exibe notificação mesmo quando a localização informada pelo rastreador for a mesma da anterior.</string>
    <string name="lblAvailable">Alerta de disponibilidade</string>
    <string name="txtAvailable">Notifica assim que a operadora de telefonia confirmar se foi possível ou não entregar um SMS ao rastreador.</string>
    <string name="lblSMSResponse">Recebimento de SMS</string>
    <string name="txtSMSResponse">Mostra uma notificação toda vez que o servidor receber qualquer comunicação em SMS deste rastreador.</string>
    <string name="TrackerLabel">Rastreador: %1$s</string>
    <string name="txtLoading">Carregando informações&#8230;</string>
    <string name="imgLoading">Carregando&#8230;</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Novo rastreador</string>
    <string name="lblBasicConfig">Configurações básicas</string>
    <string name="lblTrackerName">Nome de identificação:</string>
    <string name="txtTrackerDescriptionHint">(opcional)</string>
    <string name="lblTrackerDescription">Descrição do rastreador:</string>
    <string name="lblModel">Modelo</string>
    <string name="model_tk102b">Coban TK102B</string>
    <string name="model_tk1102">Powerpack TK1102</string>
    <string name="model_st940">Suntech ST940</string>
    <string name="model_spot">Spot TRACE</string>
    <string name="model_tk306">Coban TK306B</string>
    <string name="model_pt39">TechGPS PT39</string>
    <string name="model_gt02">Coban TK110</string>
    <string name="lblTrackerIdentification">Informações do rastreador</string>
    <string name="lblPassword">Senha de configuração:</string>
    <string name="lblPhoneNumber">Número de telefone:</string>
    <string name="txtPhoneNumberHint">6799998888</string>
    <string name="lblPhoneNumberSubtitle">Informe o número de telefone, IMEI (somente para modo GPRS) e a senha utilizada para configuração do rastreador.</string>
    <string name="lblFeedID">Identificador (Feed ID):</string>
    <string name="txtFieldIDHint">0I48pmHmVsrh88oe38f0etUjB8pJglLOp</string>
    <string name="lblFeedIDSubtitle">Os campos acima devem ser preenchidos com o valor do FEED ID e da senha utilizados na página de compartilhamento da SPOT.</string>
    <string name="lblSuntechID">Identificador (6 dígitos):</string>
    <string name="txtSuntechHint">696478</string>
    <string name="lblSuntechSubtitle">Informe o número de identificação do aparelho. Por padrão, o número é composto pelos 6 últimos dígitos do IMEI.</string>
    <string name="lblEditIDSubtitle"><b>Alerta:</b> O campo de identificação do aparelho não deve ser alterado. Caso necessário, cadastre um novo rastreador com o número de identificação desejado.</string>
    <string name="lblColorIdentification">Cor de identificação</string>
    <string name="lblColorDescription">Selecione uma cor para facilitar a identificação a visualização do rastreador no mapa.</string>
    <string name="lblTrackerConfig">Configurações do rastreador</string>
    <string name="title_tracker_tk102b_settings">Configurações - TK 102B</string>
    <string name="lblLowBattery">Ao atingir um nível crítico de bateria, o rastreador começará a enviar alertas periódicos.</string>
    <string name="swLowBattery">Enviar alerta de bateria fraca</string>
    <string name="lblShockAlert">Caso ativado, o rastreador enviará um alerta ao detectar qualquer vibração do dispositivo.</string>
    <string name="swShockAlert">Ativar alerta de vibração</string>
    <string name="swMoveoutAlert">Ativar alerta de evasão</string>
    <string name="lblMeters">metros</string>
    <string name="lblMoveoutAlert">O rastreador enviará alertas em sequência quando se movimentar acima de 200 metros da posição atual.</string>
    <string name="swSpeedAlert">Ativar alerta de velocidade</string>
    <string name="lblSpeedLimit">Limite de velocidade:</string>
    <string name="txtSpeedLimitHint">120</string>
    <string name="lblSpeedLimitUnit">km/h</string>
    <string name="lblSpeedAlert">Quando o rastreado identificar uma velocidade acima do limite estabelecido, um alerta será enviado.</string>
    <string name="swStatusCheck">Enviar atualização diária de status</string>
    <string name="lblStatusCheck">Caso esta opção seja ativada, diariamente o rastreador deverá enviar uma atualização sobre o estado da bateria e a intesidade do sinal GSM.</string>
    <string name="swUpdateInterval">Enviar localização periodicamente</string>
    <string name="lblUpdateInterval"> <b>Alerta:</b> Caso ativado, o monitoramento será mais preciso, porém a duração da bateria do rastreador será diretamente afetada por esta opção.</string>
    <string name="swNotifications">Exibir notificações deste rastreador</string>
    <string name="lblNotificationTitle">Opções de notificação</string>
    <string name="lblNotifications">Defina quais eventos gerados pelo rastreador que deverão resultar em uma notificação a ser exibida neste celular.</string>
    <string name="cbMovement">Notificação de movimentação</string>
    <string name="cbStopped">Notificação de permanência</string>
    <string name="cbLowBattery">Notificação de bateria fraca</string>
    <string name="cbMoveout">Notificação de evasão </string>
    <string name="cbShockAlert">Notificação de vibração </string>
    <string name="cbSpeedLimit">Notificação de limite de velocidade</string>
    <string name="cbStatusCheck">Notificação de status</string>
    <string name="cbAvailable">Notificação de disponibilidade</string>
    <string name="lblAvailableDescription">Se esta opção for ativada, qualquer contato realizado pelo rastreador resultará na exibição de uma notificação neste celular."</string>
    <string name="title_tracker_st940_settings">Configurações - ST 940</string>
    <string name="swDeepsleep">Ativar ultra-economia de bateria</string>
    <string name="lblDeepsleep">Caso ativado, o rastreador desativa a maior parte dos sensores e entra em hibernação, ativando poucas vezes ao dia para enviar usa localização.</string>
    <string name="swShock">Ativar alerta de vibração</string>
    <string name="lblShock">Neste modo, o rastreador enviará alertas constantemente a partir do momento que detectar qualquer vibração do dispositivo.</string>
    <string name="swTurnOff">Permitir desligar pelo botão</string>
    <string name="lblTurnOff">Define se será possível ou não desligar o rastreador pressionando o botão presente no próprio dispositivo.</string>
    <string name="swMagnetAlert">Ativar alerta de magnetismo </string>
    <string name="lblMagnetAlert">Quando ativo, o rastreador enviará um alerta ao detectar que o dispositivo foi acoplado ou desacoplado da base magnética.</string>
    <string name="lblUpdateIdle">Dispositivo parado: </string>
    <string name="lblUpdateActive">Dispositivo em movimento: </string>
    <string name="cbShock">Notificação de vibração </string>
    <string name="cbMagnet">Notificação de magnetismo</string>
    <string name="title_tracker_spot_settings">Configurações - SPOT</string>
    <string name="lblSpotConfig"><b>ALERTA:</b> Este modelo de rastreador não suporta configurações enviadas remotamente. Para realizar qualquer alteração nas configurações do dispositivo, conecte a um computador e utilize o software <b>Atualizador de dispositivo SPOT. \n\n  <a href='https://br.findmespot.com/pg/index.php?cid=225'>Clique aqui para mais informações </a>\n</b>"</string>
    <string name="cbTurnOff">Notificação de desligamento</string>
    <string name="cbFunctioning">Notificação de funcionamento</string>
    <string name="lblFunctioning">Caso habilitada, ainda que o rastreador não detecte nenhum movimento, uma vez por dia ele enviará sua localização para confirmar o seu funcionamento.</string>
    <string name="title_tracker_tk1102_settings">Configurações - TK 1102</string>
    <string name="swProtocol">Ativar modo GPRS</string>
    <string name="lblProtocol">Ao ativar este modo, o rastreador para de utilizar o modo de mensagens (SMS) e passa a utilizar o modo de dados (GPRS) para comunicação mais rápida com o servidor.</string>
    <string name="swGPSAlert">Ativar alerta de ponto cego GPS</string>
    <string name="txtInterval">Intervalo de atualização</string>
    <string name="menu_default_settings">Opções de exibição</string>
    <string name="menu_tracker_settings">Configurações do dispositivo</string>
    <string name="menu_notification_settings">Opções de notificação</string>
    <string name="menu_trackers">Dispositivos rastreadores</string>
    <string name="menu_add">Adicionar rastreador</string>
    <string name="menu_refresh">Atualizar lista</string>
    <string name="menu_search">Pesquisar por nome</string>
    <string name="menu_notifications">Opções de notificação</string>
    <string name="menu_notification_sound">Som de notificação</string>
    <string name="menu_notification_vibrate">Opções de vibração</string>
    <string name="menu_notification_disable">Desativar notificações</string>
    <string name="menu_maps">Tipos de mapa</string>
    <string name="map_default">Mapa padrão</string>
    <string name="map_satellite">Satélite</string>
    <string name="map_terrain">Terreno</string>
    <string name="map_hybrid">Híbrido</string>
    <string name="menu_tracker_commands">Comandos do rastreador</string>
    <string name="menu_request_position">Solicitar localização atual</string>
    <string name="menu_request_status">Solicitar status do dispositivo</string>
    <string name="menu_reset">Reiniciar configurações</string>
    <string name="menu_tracker_config">Configurações do rastreador</string>
    <string name="menu_map_components">Componentes do mapa</string>
    <string name="menu_map_path">Caminho entre coordenadas</string>
    <string name="menu_map_radius">Raio de alcance de torres GSM</string>
    <string name="menu_my_location">Minha localização</string>
    <string name="menu_zoom_control">Controles de zoom</string>
    <string name="menu_contacts">Buscar lista de contato</string>
</resources>