<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:orderInCategory="1"
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_contacts"
        android:icon="@drawable/ic_perm_contact_calendar_white_24dp"
        android:orderInCategory="1"
        android:title="@string/menu_contacts"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:id="@+id/action_add"
        android:icon="@drawable/ic_check_black_24dp"
        android:title="@string/menu_include"/>
</menu>