<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.gov.dpf.tracker.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/vwMainScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="br.gov.dpf.tracker.RegisterActivity"
            tools:showIn="@layout/activity_register">

            <android.support.v7.widget.CardView
                android:id="@+id/vwUpdateInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="serif"
                        android:text="@string/txtInterval"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="14sp"
                        android:typeface="monospace" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="#82b3d6" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtIntervalAlert"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lblUpdateInterval"
                            android:layout_marginBottom="8dp"
                            android:textSize="12sp" />

                        <com.xw.repo.BubbleSeekBar
                            android:id="@+id/seekBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            app:bsb_bubble_color="@color/colorAccent"
                            app:bsb_bubble_text_color="@color/colorPrimaryDark"
                            app:bsb_max="6"
                            app:bsb_min="0"
                            app:bsb_progress="2"
                            app:bsb_touch_to_seek="true"
                            app:bsb_hide_bubble="true"
                            app:bsb_auto_adjust_section_mark="true"
                            app:bsb_second_track_color="@color/colorAccent"
                            app:bsb_section_count="6"
                            app:bsb_section_text_position="below_section_mark"
                            app:bsb_show_section_mark="true"
                            app:bsb_show_section_text="true"
                            app:bsb_track_color="#888"/>

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="serif"
                        android:text="@string/lblNotificationTitle"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="14sp"
                        android:typeface="monospace"
                        tools:text="Notificações" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="#82b3d6" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:orientation="vertical">

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/swLowBattery"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/lblLowBattery" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtLowBattery"
                            android:textSize="12sp" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/swMovement"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:checked="true"
                            android:text="@string/lblMovementStatus" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtMovementStatus"
                            android:textSize="12sp" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/swStopped"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:checked="true"
                            android:text="@string/lblStoppedStatus" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtStoppedStatus"
                            android:textSize="12sp" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/swTrackerStatus"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:checked="false"
                            android:text="@string/lblTrackerStatus" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtTrackerStatus"
                            android:textSize="12sp" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/swAvailable"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:checked="false"
                            android:text="@string/lblAvailable" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtAvailable"
                            android:textSize="12sp" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/swSMSResponse"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:checked="false"
                            android:text="@string/lblSMSResponse" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtSMSResponse"
                            android:textSize="12sp" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_black_24dp" />

</android.support.design.widget.CoordinatorLayout>

